# Cart_Pole_Inverted_Pendulum_Control

./: CMakeLists.txt  README.md  package.xml
include/: controller_base.h  controller_lqr.h  controller_mpc.h
include/mpc_solver/: mpc_solver.h  mpc_solver.tpp
launch/: control_cpp.launch  control_python.launch  spawn_gazebo.launch
script/: control_py.py  controller_base.py  lqr.py  mpc.py
src/: control.cpp  controller_lqr.cpp  controller_mpc.cpp
urdf/: cartpole.urdf  controller_config.yaml
